force-app/main/default/objects/Scheme_Product_Group_Item__c/Scheme_Product_Group_Item__c.object-meta.xml
<CustomObject>
    <label>Scheme Product Group Item</label>
    <nameField>
        <displayFormat>SPGI-{0000}</displayFormat>
        <label>Scheme_Product_Group_Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Product Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>