force-app/main/default/objects/Scheme_Product_Group_Item__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <formula>Product__r.MRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>