force-app/main/default/objects/Scheme_Product_Group_Item__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <formula>Product__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>