force-app/main/default/objects/Scheme_Product_Group_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Scheme Product Group Items</relationshipLabel>
    <relationshipName>Scheme_Product_Group_Items</relationshipName>
    <type>Lookup</type>
</CustomField>