force-app/main/default/objects/Scheme_Product_Group_Item__c/fields/Scheme_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Product_Group__c</fullName>
    <label>Scheme Product Group</label>
    <referenceTo>Scheme_Product_Group__c</referenceTo>
    <relationshipLabel>Scheme Product Group Items</relationshipLabel>
    <relationshipName>Scheme_Product_Group_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>